--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Yogesh Agarwal",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.2",
+  },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
@@ -16,7 +18,6 @@
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.26.2",
-    "express": "^4.15.2",
     "file-loader": "^0.10.1",
     "jquery": "^3.1.1",
     "script-loader": "^0.6.1",
