Udated the express dependency and readme

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Yogesh Agarwal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
